Overflow issue fixed

--- a/src/styles/2-base/_global.sass
+++ b/src/styles/2-base/_global.sass
@@ -1,8 +1,8 @@
 body, html
     width: 100%
     height: 100%
-body
     overflow-x: hidden
+body
     background: $alice-blue 
     font-family: $font-type-alt 
     color: $japanese-indigo 
@@ -24,6 +24,4 @@ h1, h2, h3, h4, h5, h6
 .text-faded
     color: rgba(255, 255, 255, 0.7)
 
-@media only screen and (max-width: 600px) 
-    .overflow
-        overflow-x: hidden
+
